--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
   background: #fff;
   display: flex;
   justify-content: center;
+  align-items: center;
   min-height: 100vh;
   padding: 20px;
 }
@@ -18,6 +19,7 @@ body {
 .container {
   width: 100%;
   max-width: 420px;
+  margin-top: 20px;
 }
 
 /* Profile section */
@@ -66,6 +68,9 @@ body {
 }
 
 /* Intro section */
+.intro {
+  margin-top: 40px;
+}
 .intro h2 {
   font-size: 1.4rem;
   font-weight: 500;
